# Roadwork-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
crates/sync/: Cargo.toml
crates/sync/src/: lib.rs
media/: AppIcon.icns
opendata/json/: Belgium-Liege.json  France-44-Loire-Atlantique.json  France-72-Sarthe.json  France-Avignon.json  France-Bordeaux.json  France-Issy-les-Moulineaux.json  France-Lyon.json  France-Montpellier.json  France-Paris.json  France-Pornichet.json  France-Rennes.json  France-Rouen.json  France-Toulouse.json  Germany-Berlin.json  USA-CA-SanFrancisco.json  USA-IL-Chicago.json  index.json
packaging/MacOS/Contents/: Info.plist
src/: config.rs  json_tools.rs  lib.rs  main.rs  message.rs  roadwork.rs  roadwork_app.rs  settings.rs
src/gui/: about_dialog.rs  dummy_text_buffer.rs  logs_panel.rs  metada_dialog.rs  mod.rs  roadwork_marker.rs  status_panel.rs
src/mapview/: marker.rs  mod.rs
src/model/: date_range.rs  mod.rs  roadwork.rs  roadwork_data.rs
src/model/wkt/: mod.rs  polygon.rs
src/opendata/: OpendataResponse.java  OpendataService.java  bootstrap.rs  mod.rs  open_data_service_manager.rs
src/opendata/json/: mod.rs  opendata_service.rs
src/opendata/json/model/: date_parser.rs  date_result.rs  lat_lng.rs  metadata.rs  mod.rs  parser.rs  service_descriptor.rs
src/service/: http_service.rs  mod.rs  synchronization_service.rs
