[package]
name = "Roadwork-rs"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "Roadwork-rs"
path = "src/main.rs"

[lib]
name = "roadworkapp_lib"
crate-type = ["rlib"]
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
chrono = "0.4"
chrono-tz = "0.10"
egui = "0.31"
egui_extras = { version = "0.31", features = ["svg"] }
egui_logger = "0.7.0"
eframe = { version = "0.31", features = ["persistence"] }
home = "0.5.11"
jsonpath-rust = "1.0.1"
log = "0.4"
open = "5.3.2"
regex = "1.11"
reqwest = { version = "0.12", features = ["json", "blocking"] }
roadwork-sync = { path = "crates/sync"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
unicode-normalization = "0.1.24"
urlencoding = "2.1.3" # maybe a better lib
walkers = "0.41.0"

[workspace]
members = ["crates/sync"]