[package]
name = "Roadwork-rs"
version = "0.2.1"
edition = "2024"
publish = false

[[bin]]
name = "Roadwork-rs"
path = "src/main.rs"

[lib]
name = "roadworkapp_lib"
crate-type = ["rlib"]
path = "src/lib.rs"

[package.metadata.bundle]
name = "Roadwork"
identifier = "com.kpouer.roadwork"
icon = ["media/1024x1024.png", "media/AppIcon.icns"]

[dependencies]
base64 = "0.22"
chrono = "0.4"
chrono-tz = "0.10"
egui = "0.32"
egui_extras = { version = "0.32", features = ["svg"] }
egui_logger = "0.8.0"
eframe = { version = "0.32", features = ["persistence"] }
egui-notify = "0.20.0"
home = "0.5.11"
jsonpath-rust = "1.0.4"
log = "0.4"
open = "5.3.2"
regex = "1.11"
reqwest = { version = "0.12", features = ["json", "blocking"] }
roadwork-sync = { path = "crates/sync"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
unicode-normalization = "0.1.24"
urlencoding = "2.1.3" # maybe a better lib
walkers = "0.45.0"
position = "0.0.3"

[workspace]
members = ["crates/sync"]

[profile.dev.package."*"]
opt-level = 2