[package]
name = "Roadwork"
version = "0.2.1"
edition = "2024"
build = "build.rs"

[[bin]]
name = "Roadwork-rs"
path = "src/main.rs"

[lib]
name = "roadworkapp_lib"
crate-type = ["rlib"]
path = "src/lib.rs"

[package.metadata.bundle]
name = "Roadwork"
identifier = "com.kpouer.roadwork"
icon = ["media/icon.png", "media/AppIcon.icns"]

[dependencies]
base64 = "0.22"
chrono = "0.4"
chrono-tz = "0.10"
egui = "0.33"
egui_extras = { version = "0.33", features = ["svg"] }
egui_logger = "0.9.0"
eframe = { version = "0.33", features = ["persistence"] }
egui-notify = "0.21.0"
home = "0.5.12"
jsonpath-rust = "1.0.4"
log = "0.4"
open = "5.3.2"
regex = "1.12"
reqwest = { version = "0.12", features = ["json", "blocking"] }
roadwork-sync = { path = "crates/sync", version = "0.1.0"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
unicode-normalization = "0.1.24"
urlencoding = "2.1.3" # maybe a better lib
walkers = "0.49.0"

[workspace]
members = ["crates/sync"]

[profile.dev.package."*"]
opt-level = 2

[build-dependencies]
embed-resource = "3.0.5"
image = { version = "0.25", default-features = false, features = ["png"] }
ico = "0.4"
